--- a/configs/kernel-2.6.32-x86_64.config
+++ b/configs/kernel-2.6.32-x86_64.config
@@ -2,7 +2,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32
-# Mon Mar 30 11:09:11 2020
+# Tue Mar 31 18:58:29 2020
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -249,7 +249,7 @@ CONFIG_FREEZER=y
 # Processor type and features
 #
 CONFIG_TICK_ONESHOT=y
-CONFIG_NO_HZ=y
+# CONFIG_NO_HZ is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_GENERIC_CLOCKEVENTS_MIN_ADJUST=y
@@ -516,7 +516,6 @@ CONFIG_X86_P4_CLOCKMOD=m
 CONFIG_X86_SPEEDSTEP_LIB=m
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
-CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_INTEL_IDLE=y
 
 #
