--- a/configs/kernel-2.6.32-x86_64.config
+++ b/configs/kernel-2.6.32-x86_64.config
@@ -2,7 +2,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32
-# Tue Mar 31 18:58:29 2020
+# Fri May  1 11:18:22 2020
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -3892,8 +3892,7 @@ CONFIG_EDAC_I7300=m
 CONFIG_EDAC_SBRIDGE=m
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
-CONFIG_RTC_HCTOSYS=y
-CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
+# CONFIG_RTC_HCTOSYS is not set
 # CONFIG_RTC_DEBUG is not set
 
 #
